package DP.Tutorial.Decorator.Decorators;

public class BouquetDecorator {

    public int cost() {
        return 0;
    }

    public String name() {
        return null;
    }

    public void decorate() {

    }

}
